<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/sapphire_how_to_tab" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingHorizontal="@dimen/sapphire_edu_padding_horizontal">
        <androidx.cardview.widget.CardView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" app:cardCornerRadius="28.0dip" app:cardElevation="0.0dip">
            <com.airbnb.lottie.LottieAnimationView android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerCrop" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/p11_edu_animation" />
        </androidx.cardview.widget.CardView>
        <TextView android:textAppearance="?textAppearanceBodyMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sapphire_more_info_textview_margin_top" android:text="@string/how_edu_step_one_desc" android:drawableLeft="@drawable/gs_videocam_auto_vd_theme_24" android:drawablePadding="@dimen/sapphire_more_info_textview_drawable_padding" />
        <TextView android:textAppearance="?textAppearanceBodyMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sapphire_more_info_textview_margin_top" android:text="@string/how_edu_step_two_desc" android:drawableLeft="@drawable/gs_visibility_vd_theme_24" android:drawablePadding="@dimen/sapphire_more_info_textview_drawable_padding" />
        <TextView android:textAppearance="?textAppearanceBodyMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sapphire_more_info_textview_margin_top" android:text="@string/how_edu_step_three_desc" android:drawableLeft="@drawable/gs_cloud_upload_vd_theme_24" android:drawablePadding="@dimen/sapphire_more_info_textview_drawable_padding" />
        <TextView android:textAppearance="?textAppearanceBodyMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sapphire_more_info_textview_margin_top" android:text="@string/how_edu_step_four_desc" android:drawableLeft="@drawable/gs_notifications_vd_theme_24" android:drawablePadding="@dimen/sapphire_more_info_textview_drawable_padding" />
    </LinearLayout>
</merge>