<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="24.0dip" android:layout_marginBottom="24.0dip" android:layout_marginHorizontal="24.0dip">
        <TextView android:textAppearance="?textAppearanceBody2" android:textColor="?colorOnSurface" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/manual_focus_bottom_sheet_body" />
        <androidx.cardview.widget.CardView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" app:cardCornerRadius="28.0dip" app:cardElevation="0.0dip">
            <com.google.android.apps.camera.ui.eduimageview.EduImageView android:id="@id/focus_feature_bottom_sheet_image" android:layout_width="370.0dip" android:layout_height="227.0dip" android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="@dimen/bottom_sheet_text_max_width">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
                <ImageView android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/peaking_highlight" android:scaleType="center" android:contentDescription="@string/manual_focus_bottom_sheet_peaking_bullet" />
                <TextView android:textAppearance="?textAppearanceBody2" android:textColor="?colorOnSurface" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/manual_focus_bottom_sheet_peaking_bullet" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
                <ImageView android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/picture_in_picture" android:scaleType="center" android:contentDescription="@string/manual_focus_bottom_sheet_peaking_bullet" />
                <TextView android:textAppearance="?textAppearanceBody2" android:textColor="?colorOnSurface" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/manual_focus_bottom_sheet_pip_bullet" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</merge>